<resources>
    <string name="app_name">DiaPsy</string>
    <string name="crime_title_hint">Введите название преступления</string>
    <string name="crime_title_label">Сахар крови</string>
    <string name="crime_details_label">Время замера</string>
    <string name="date_picker_title">Время замера:</string>
    <string name="warning_text">Пожалуйста, введите Сахар крови</string>
    <string name="zamer_IU_label">Инсулин</string>
    <string name="zamer_long_IU_label">Длинный инсулин</string>
    <string name="new_zamer">Новый замер</string>
    <string name="print_em">Распечатать в Excel</string>
    <string name="show_subtitle">Показать подзаголовки</string>
    <string name="subtitle_format">%1$d замеры</string>
    <string name="BS_zamer_fragment_input_hint">Сахар крови</string>
    <string name="IU_zamer_fragment_input_hint">Единицы инсулина</string>
    <string name="BU_zamer_fragment_input_hint">Хлебные единицы</string>
    <string name="long_IU_fragment_input_hint">Длинный инсулин</string>
    <string name="date_pick_label">Дата замера:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_psycology">Психология</string>
    <string name="title_activity_stats">Статистика</string>
    <string name="dnevnick">Дневник самоконтроля</string>
    <string name="before">До еды</string>
    <string name="selecttype">Указать тип</string>
    <string name="after">После еды</string>
    <string name="sleep">Сон</string>
    <string name="active">Активность</string>
    <string name="title_activity_scrolling"> </string>
    <string name="large_text"></string>
    <string name="_1_1"><b>РЕЦЕПТ №1. КАК ПРИНЯТЬ ДИАБЕТ?</b> \n\nПроцесс принятия диабета происходит постепенно и занимает примерно год. Путь принятия никогда не бывает легким. Только пройдя через определенные эмоциональные этапы, человек может принять ситуацию и идти дальше, не обвиняя и не ища виноватых, просто жить и радоваться каждому дню. Прямо сейчас ты узнаешь о каждом этапе. Я надеюсь, что эта информация поможет тебя понять, в какой точке пути принятия находишься ты и возможно продвинуться дальше, благодаря советам ниже.
        \n\nИтак, <b>Первый этап – это этап ОТРИЦАНИЯ.</b> Это защитная реакция психики, способ «отгородиться». Основные признаки этого этапа – не желание обсуждать проблему, замкнутость, попытки делать вид, что все в порядке, неверие в случившееся.
    \n\n<b>Второй этап – это СОПРОТИВЛЕНИЕ.</b> Здесь могут быть различные чувства. Гнев может проявляться по-разному – человек может злиться на себя, на людей вокруг, на ситуацию в целом, на диабет. Далее может появиться надежда, что диабет излечим. При диабете может казаться, что врачи поставили ошибочный диагноз на этапе медового месяца. К сожалению, на сегодняшний день, для СД 1 типа есть только один способ лечения – заместительная гормонотерапия. Все остальное (лечение травами и физической нагрузкой) может быть лишь дополнительной мерой к основному лечению, но никак не заменой инсулина, который не вырабатывается. На этом этапе, к сожалению, самая большая опасность – это упущенное время, а также высокий риск осложнений, острых состояний. После периода «торгов» человек понимает, что все его усилия и истраченные эмоции тщетны, что они не изменят ситуацию. Здесь характерна пассивность, преобладают пессимистические мысли: все плохо, ни в чем нет смысла, жизнь сплошное разочарование.
    \n\n<b>Третий этап - это ИССЛЕДОВАНИЕ,</b> постепенный выход из кризиса. Период работы над проблемой. Поиск ресурсов, соблюдение рекомендаций врача, вникание пациента и родителя в то, как улучшить компенсацию, какие причинно-следственные связи есть в инсулинотерапии, балансе режима питания и физической нагрузки. Здесь приобретаются новые навыки, проводится анализ каждой возникающей ситуации, т.к. у каждого СВОЙ диабет и свои особенности течения. На этом этапе закрепляются алгоритмы действий и коррекция графика при различных условиях и ситуациях.
    \n\n<b>Завершающий 4 этап это ПРИНЯТИЕ.</b> Лишь после прохождения всех перечисленных этапов возможно принятие диабета.
        \n\n<b>Вот некоторые советы, которые помогут тебе на первых порах адаптироваться к диабету и постепенно его принять (встроить в свою жизнь):</b>
    \n\n•	Дай себе время, чтобы привыкнуть к переменам в жизни (7-10 месяцев);
    \n\n•	Активно сотрудничай с ведущим тебя врачом-эндокринологом, выполняй все его рекомендации;
    \n\n•	Установи режим с четким расписанием инсулиновых инъекций и приема пищи, временем занятий и отдыха;
    \n\n•	Изучай книги по диабету, учись разбираться во всех тонкостях компенсации. Начни с самого простого – подсчета ХЕ, инсулина, техник инъекций.
    \n\n•	Поделись своими чувствами с родителями, близкими, или другом, которому доверяешь. В это время важно не замыкаться в себе, а дать себе возможность отреагировать, поплакать, выразить свои чувства на бумаге (дневник);
    \n\n•	Не забывай, что твой близкий круг, семья также проходит путь принятия. Принимай помощь и поддержку от близких. Иногда стоит посмотреть на проблему их глазами;
    \n\n•	Обучись в «Школе Сахарного Диабета», получи исчерпывающую информацию обо всех аспектах диабета, чтобы уметь справляться с любыми критическими состояниями. Школу диабета лучше посещать всей семьей;
    \n\n•	По возможности обратись за  помощью к профессиональному психологу.</string>
    <string name="_2_1"><b>РЕЦЕПТ № 2. ПОЧЕМУ Я?</b>\n\n
	Возможно, узнав о своем диабете, ты испытал целый спектр чувств от растерянности и неверия, до злости, гнева, бессилия, обиды. Твои чувства естественны. Человек так устроен – первое, что он делает в кризисной ситуации, это ищет виноватого в случившемся. Ему нужно объяснение – почему это так и кого нужно наказать&#8230; И тогда человек может быть раздражен и настроен агрессивно по отношению к своим близким или врачам. Он глух к другим и к помощи, которая может прийти через них. Или считает виновником себя и тогда может начать неосознанно наказывать себя, разрушать.\n\n
	С диабетом разрушать себя легко - достаточно просто бездействовать. Отрицать необходимость инсулинотерапии и контроля сахара, бездумно поглощать углеводы без подсчета ХЕ&#8230; Разрушать себя, значит разрушать жизнь своих близких, любимых, доставлять им боль. Родные будут вынуждены помогать тебе с острыми состояниями, которые были приобретены в результате бездействия, отрицания&#8230; Об этом позже можно жалеть, но время будет упущено&#8230; Чувство обиды и вины может поселиться внутри на долгое время. Для горевания и переживания боли любому человеку необходимо какое-то время и поддержка семьи, друзей, близких. Но если тяжелые чувства и мысли не покидают тебя и через 8-10 месяцев от постановки диагноза, желательно обратиться за психотерапевтической помощью.\n\n
	Почему у меня диабет? Почему это произошло со мной? Этот вопрос очень сложный. Для чего в нашу жизнь приходит то или иное испытание? Трудно понять, а еще труднее найти причину – Почему Я? Или даже не так. Чаще люди говорят: За что это мне?\n\n
        Если мы живые люди, то горевание и потери – неизбежная часть жизни. <b>Много людей прямо сейчас ищут ответ на вопрос «Почему это случилось со мной?». И вот несколько общих тезисов, которые удалось извлечь и обобщить, пользуясь «коллективным разумом»:</b>\n\n
•	Трудности приходят в нашу жизнь для возможности роста, развития души и сердца.\n\n
•	Преодоление жизненных трудностей – это особый опыт, чтобы стать сильнее. Быть стойким и милосердным, когда окружающим требуется помощь и поддержка.\n\n
•	Возможно, трудности приходят в жизнь человека, как знак – остановиться&#8230; Поразмышлять, а твоя ли это истинная цель, к которой ты движешься сломя голову? Может быть, пора по-другому расставить приоритеты и немного сменить вектор?\n\n
•	Данная трудность может выступать как защита и спасение человека от чего-то более тяжелого, т.е. оберегать его. Бог не дает человеку больше, чем он может вынести;\n\n
•	Преодоление трудностей – это упорство и труд, это путь, позволяющий достичь успеха.\n\n
•	Преодоление трудностей – это встреча с самим собой и своими ограничениями, это единственный способ понять: «Чего я стОю в жизни на самом деле?»\n\n
•	Трудность – это возможность найти и выполнить истинное свое предназначение в жизни;\n\n
	У человека всегда есть выбор: погрузиться с головой в тяжелые чувства – быть жертвой обстоятельств или превратить эту кризисную ситуацию в точку роста. Слегка изменив формулировку вопроса с «Почему Я?» на «Что я могу с этим делать?», ты сможешь развернуться лицом к проблеме и обрести себя, стать главным героем своей жизни. Тебе решать - сотрудничать с диабетом или продолжать его отрицать; занять активную позицию или бездействовать. Диабет контролирует ситуацию или ты сам?\n\n
	Каждый человек по природе своей силен и любит жизнь. Ты обязательно справишься с трудностями, даже если в начале Пути тебе это кажется невозможным. ДОРОГУ ОСИЛИТ ИДУЩИЙ. Важно не останавливаться, каждый день делать шаг к хорошим показателям, к позитивным изменениям.\n\n
	Давай посмотрим, что с этим опытом делают другие? Реальные примеры из жизни знаменитых диабетиков ЗДЕСЬ:  https://сахарок.com/aktual-no/15-izvestnyh-lyudej-s-saharnym-diabetom-10316271.html\n\n
<b>Итак. «Почему Я?».</b> Готового или однозначного ответа на этот вопрос не существует. Но ты можешь найти СВОЙ ОТВЕТ, который будет отражать именно ТВОЙ СМЫСЛ, а значит иметь ЛИЧНУЮ ЦЕННОСТЬ. К тому же ответ на этот вопрос не приходит быстро. Поиск ответа может занять годы. Ответ приходит только через действие в предлагаемых условиях, через работу над собой, движение, рост и постепенное ПРИНЯТИЕ.</string>
    <string name="time">Время</string>
    <string name="date">Дата</string>
</resources>