<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fauna_one"
                android:text="@string/BS_zamer_fragment_input_hint" />

            <EditText
                android:id="@+id/blood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/fauna_one"
                android:hint="@string/BS_zamer_fragment_input_hint"
                android:inputType="numberDecimal" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fauna_one"
                android:text="@string/IU_zamer_fragment_input_hint" />

            <EditText
                android:id="@+id/insulin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/fauna_one"
                android:hint="@string/IU_zamer_fragment_input_hint"
                android:inputType="numberDecimal" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fauna_one"
                android:text="@string/BU_zamer_fragment_input_hint" />

            <EditText
                android:id="@+id/bread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/fauna_one"
                android:hint="@string/BU_zamer_fragment_input_hint"
                android:inputType="numberDecimal" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fauna_one"
                android:text="@string/long_IU_fragment_input_hint" />

            <EditText
                android:id="@+id/long_insulin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/fauna_one"
                android:hint="@string/long_IU_fragment_input_hint"
                android:inputType="numberDecimal" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fauna_one"
                android:text="@string/date_pick_label" />

            <TextView
                android:id="@+id/date_view"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/fauna_one"
                android:text="@string/date_pick_label" />

            <Button
                android:id="@+id/zamer_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/fauna_one"
                android:text="@string/time" />

            <Button
                android:id="@+id/zamer_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/fauna_one"
                android:text="@string/date" />

            <Button
                android:id="@+id/typeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:elevation="0dp"
                android:fontFamily="@font/fauna_one"
                android:text="Указать тип" />
            <LinearLayout
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <android.support.design.widget.FloatingActionButton

                        android:id="@+id/zamer_delete_fab"
                        android:layout_width="90dp"
                        android:layout_height="60dp"
                        android:layout_gravity="start|bottom|center"
                        android:layout_marginBottom="24dp"
                        android:layout_marginStart="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_delete"
                        app:backgroundTint="@color/colorForDelFab"
                        app:borderWidth="0dp"
                        app:elevation="5dp" />
                </FrameLayout>

                <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                    <android.support.design.widget.FloatingActionButton

                        android:id="@+id/zamer_ok_fab"
                        android:layout_width="180dp"
                        android:layout_height="70dp"
                        android:layout_gravity="end|bottom|center"
                        android:layout_marginBottom="24dp"
                        android:layout_marginEnd="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_ok"
                        app:borderWidth="0dp"
                        app:elevation="5dp" />

                </FrameLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
